{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 22,
  "lineage": "8b13fd51-3199-7339-da4f-471160fb7c19",
  "resources": [
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0942c9a13e17de52a",
            "arn": "arn:aws:ec2:us-east-2:683659468594:elastic-ip/eipalloc-0942c9a13e17de52a",
            "domain": "vpc",
            "id": "eipalloc-0942c9a13e17de52a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-190-21-95.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.21.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:internet-gateway/igw-0feef6dfe59ec788d",
            "id": "igw-0feef6dfe59ec788d",
            "owner_id": "683659468594",
            "tags": {
              "Name": "project_vpc-igw"
            },
            "tags_all": {
              "Name": "project_vpc-igw"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0942c9a13e17de52a",
            "association_id": "eipassoc-023ce0dd82ee37109",
            "connectivity_type": "public",
            "id": "nat-0512489b801a21374",
            "network_interface_id": "eni-08ee10dae0b0ed0a7",
            "private_ip": "10.0.101.206",
            "public_ip": "18.190.21.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006eb476ca956f401",
            "tags": {
              "Name": "project_vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "project_vpc-nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:route-table/rtb-056e25a089e8cd0ad",
            "id": "rtb-056e25a089e8cd0ad",
            "owner_id": "683659468594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0512489b801a21374",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_vpc-private-rt"
            },
            "tags_all": {
              "Name": "project_vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:route-table/rtb-0e52c0f6ca6702307",
            "id": "rtb-0e52c0f6ca6702307",
            "owner_id": "683659468594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0feef6dfe59ec788d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_vpc-public-rt"
            },
            "tags_all": {
              "Name": "project_vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfd498dd7bbbaab4",
            "route_table_id": "rtb-056e25a089e8cd0ad",
            "subnet_id": "subnet-0875e7f1c0193f6b9"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0250dbcc23d1b02be",
            "route_table_id": "rtb-056e25a089e8cd0ad",
            "subnet_id": "subnet-02e80ea922d4af774"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0058183a7bb1b94b1",
            "route_table_id": "rtb-056e25a089e8cd0ad",
            "subnet_id": "subnet-030dcd20d03d3b7bb"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06531ff725cb2937f",
            "route_table_id": "rtb-0e52c0f6ca6702307",
            "subnet_id": "subnet-006eb476ca956f401"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d148a090a9d9add1",
            "route_table_id": "rtb-0e52c0f6ca6702307",
            "subnet_id": "subnet-0ec219e2ad5f8bb77"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd3cc1440316da02",
            "route_table_id": "rtb-0e52c0f6ca6702307",
            "subnet_id": "subnet-038737509b01f3fbd"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:security-group/sg-02606c36fc57be4e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02606c36fc57be4e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250511181058470200000001",
            "name_prefix": "terraform-",
            "owner_id": "683659468594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_vpc-alb-sg"
            },
            "tags_all": {
              "Name": "project_vpc-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:security-group/sg-07badfacb43bfabf6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07badfacb43bfabf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/32"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02606c36fc57be4e6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250511181102266600000003",
            "name_prefix": "terraform-",
            "owner_id": "683659468594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_vpc-ec2-sg"
            },
            "tags_all": {
              "Name": "project_vpc-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_security_group.alb_sg",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:security-group/sg-0329c771d4feba746",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0329c771d4feba746",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB traffic from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07badfacb43bfabf6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250511181105585300000004",
            "name_prefix": "terraform-",
            "owner_id": "683659468594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_vpc-rds-sg"
            },
            "tags_all": {
              "Name": "project_vpc-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_security_group.alb_sg",
            "module.my_vpc.aws_security_group.ec2_sg",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-0875e7f1c0193f6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0875e7f1c0193f6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "project_vpc-private-subnet-1"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-02e80ea922d4af774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e80ea922d4af774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "project_vpc-private-subnet-2"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-030dcd20d03d3b7bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030dcd20d03d3b7bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "project_vpc-private-subnet-3"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-006eb476ca956f401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006eb476ca956f401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "project_vpc-public-subnet-1"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-0ec219e2ad5f8bb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec219e2ad5f8bb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "project_vpc-public-subnet-2"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:subnet/subnet-038737509b01f3fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038737509b01f3fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683659468594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "project_vpc-public-subnet-3"
            },
            "vpc_id": "vpc-029dcbd0896bb3525"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683659468594:vpc/vpc-029dcbd0896bb3525",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ec84cca6da51367",
            "default_route_table_id": "rtb-0d11ed788e305361b",
            "default_security_group_id": "sg-06938391a65c13db1",
            "dhcp_options_id": "dopt-051b63d1662339ca5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029dcbd0896bb3525",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d11ed788e305361b",
            "owner_id": "683659468594",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    }
  ]
}